# Palm-0.0

./: CMakeLists.txt  README.md
include/PalmDemo/: AESCoder.h  Camera.h  License.h  Net.h  Palm.h
include/opencv2/: cvconfig.h
lib/crypto++/: libcrypto++.so.6  libcrypto++.so.6.0.0
lib/opencv2/: libopencv_aruco.so.3.4  libopencv_aruco.so.3.4.15  libopencv_bgsegm.so.3.4  libopencv_bgsegm.so.3.4.15  libopencv_bioinspired.so.3.4  libopencv_bioinspired.so.3.4.15  libopencv_calib3d.so.3.4  libopencv_calib3d.so.3.4.15  libopencv_ccalib.so.3.4  libopencv_ccalib.so.3.4.15  libopencv_core.so.3.4  libopencv_datasets.so.3.4  libopencv_datasets.so.3.4.15  libopencv_dnn.so.3.4  libopencv_dnn_objdetect.so.3.4  libopencv_dnn_objdetect.so.3.4.15  libopencv_dpm.so.3.4  libopencv_dpm.so.3.4.15  libopencv_face.so.3.4  libopencv_face.so.3.4.15  libopencv_features2d.so.3.4  libopencv_features2d.so.3.4.15  libopencv_flann.so.3.4  libopencv_flann.so.3.4.15  libopencv_freetype.so.3.4  libopencv_freetype.so.3.4.15  libopencv_fuzzy.so.3.4  libopencv_fuzzy.so.3.4.15  libopencv_hdf.so.3.4  libopencv_hdf.so.3.4.15  libopencv_hfs.so.3.4  libopencv_hfs.so.3.4.15  libopencv_highgui.so.3.4  libopencv_highgui.so.3.4.15  libopencv_img_hash.so.3.4  libopencv_img_hash.so.3.4.15  libopencv_imgcodecs.so.3.4  libopencv_imgcodecs.so.3.4.15  libopencv_imgproc.so.3.4  libopencv_line_descriptor.so.3.4  (+51 more)
main/: main.cpp
res/: model.c
samples/: cam_test.cpp  class_test.cpp  cv_test.cpp  file_test.cpp  model_test.cpp
src/: AESCoder.cpp  Camera.cpp  License.cpp  Net.cpp  Palm.cpp
